--- a/InStock/View/Base.lproj/Main.storyboard
+++ b/InStock/View/Base.lproj/Main.storyboard
@@ -188,57 +188,58 @@
                                 <rect key="frame" x="0.0" y="134" width="393" height="635"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="2la-Xg-7Sj">
-                                    <size key="itemSize" width="155" height="157"/>
+                                    <size key="itemSize" width="174" height="238"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CategoryCell" id="N6e-F5-etX" customClass="CategoryCollectionViewCell" customModule="InStock" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="155" height="157"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="174" height="238"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="7OV-5e-wbl">
-                                            <rect key="frame" x="0.0" y="0.0" width="155" height="157"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="174" height="238"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Dnl-Ex-sU2">
-                                                    <rect key="frame" x="0.0" y="4" width="155" height="110"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="110" id="fRj-bp-qSz"/>
-                                                    </constraints>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Dnl-Ex-sU2">
+                                                    <rect key="frame" x="0.0" y="4" width="166" height="130"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aR8-hM-nLg">
-                                                    <rect key="frame" x="0.0" y="122" width="95" height="27"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="95" id="Dht-F2-7Dp"/>
-                                                    </constraints>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aR8-hM-nLg">
+                                                    <rect key="frame" x="8" y="207" width="84" height="20"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ydu-cO-OJe">
-                                                    <rect key="frame" x="123" y="122" width="32" height="27"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0sJ-mq-ZLZ">
+                                                    <rect key="frame" x="4" y="142" width="164" height="20.333333333333343"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2io-c8-nxh">
+                                                    <rect key="frame" x="8" y="175" width="156" height="20.333333333333343"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ydu-cO-OJe">
+                                                    <rect key="frame" x="118" y="203" width="46" height="27"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <state key="normal" title="Button"/>
                                                     <buttonConfiguration key="configuration" style="plain" image="heart" catalog="system"/>
                                                 </button>
                                             </subviews>
-                                            <constraints>
-                                                <constraint firstAttribute="trailing" secondItem="Ydu-cO-OJe" secondAttribute="trailing" id="1lY-wd-ynW"/>
-                                                <constraint firstAttribute="trailing" secondItem="Dnl-Ex-sU2" secondAttribute="trailing" id="4JL-Hx-IJW"/>
-                                                <constraint firstItem="Ydu-cO-OJe" firstAttribute="top" secondItem="Dnl-Ex-sU2" secondAttribute="bottom" constant="8" id="GxM-0m-ci0"/>
-                                                <constraint firstItem="Dnl-Ex-sU2" firstAttribute="leading" secondItem="7OV-5e-wbl" secondAttribute="leading" id="IBn-mo-K2B"/>
-                                                <constraint firstItem="Dnl-Ex-sU2" firstAttribute="top" secondItem="7OV-5e-wbl" secondAttribute="top" constant="4" id="eN5-C2-uo0"/>
-                                                <constraint firstAttribute="bottom" secondItem="aR8-hM-nLg" secondAttribute="bottom" constant="8" id="fTp-0X-zF7"/>
-                                                <constraint firstItem="aR8-hM-nLg" firstAttribute="top" secondItem="Dnl-Ex-sU2" secondAttribute="bottom" constant="8" id="jBJ-rN-mPI"/>
-                                                <constraint firstItem="aR8-hM-nLg" firstAttribute="leading" secondItem="7OV-5e-wbl" secondAttribute="leading" id="mAz-PX-A3Y"/>
-                                                <constraint firstAttribute="bottom" secondItem="Ydu-cO-OJe" secondAttribute="bottom" constant="8" id="rIa-iB-FjJ"/>
-                                                <constraint firstItem="Ydu-cO-OJe" firstAttribute="leading" secondItem="aR8-hM-nLg" secondAttribute="trailing" constant="28" id="xt0-QC-rTf"/>
-                                            </constraints>
                                         </collectionViewCellContentView>
-                                        <size key="customSize" width="155" height="157"/>
+                                        <size key="customSize" width="174" height="238"/>
                                         <connections>
                                             <outlet property="categoryImage" destination="Dnl-Ex-sU2" id="n1O-y1-lKb"/>
                                             <outlet property="categoryPrice" destination="aR8-hM-nLg" id="06S-TR-hNw"/>
+                                            <outlet property="productName" destination="0sJ-mq-ZLZ" id="ECw-BW-mry"/>
+                                            <outlet property="productType" destination="2io-c8-nxh" id="yUM-9F-6oL"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
@@ -369,6 +370,10 @@
                                             </constraints>
                                         </collectionViewCellContentView>
                                         <size key="customSize" width="155" height="157"/>
+                                        <connections>
+                                            <outlet property="productImage" destination="Sm5-82-wFB" id="EhH-nL-xnb"/>
+                                            <outlet property="productPrice" destination="Yuz-PD-uyS" id="Qgw-Rr-p0x"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                                 <connections>
@@ -419,6 +424,7 @@
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="agY-IV-80t" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="X00-eM-rf0">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="selectedImageTintColor" red="0.12549019610000001" green="0.14901960780000001" blue="0.18039215689999999" alpha="1" colorSpace="calibratedRGB"/>
