--- a/InStock/View/Base.lproj/Main.storyboard
+++ b/InStock/View/Base.lproj/Main.storyboard
@@ -267,6 +267,9 @@
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="SKY-bG-PSc"/>
                                     <barButtonItem image="cart.fill" catalog="system" id="Qfd-va-QVa">
                                         <color key="tintColor" red="0.12549019610000001" green="0.14901960780000001" blue="0.18039215689999999" alpha="1" colorSpace="calibratedRGB"/>
+                                        <connections>
+                                            <action selector="btnCartClicked:" destination="Pdi-8b-ZUE" id="Ryp-g2-LyG"/>
+                                        </connections>
                                     </barButtonItem>
                                     <barButtonItem width="8" style="plain" systemItem="fixedSpace" id="Jj2-Jd-IWj"/>
                                     <barButtonItem image="heart" catalog="system" id="JZs-k4-gCU">
