--- a/InStock/View/Base.lproj/Main.storyboard
+++ b/InStock/View/Base.lproj/Main.storyboard
@@ -1405,6 +1405,75 @@
             </objects>
             <point key="canvasLocation" x="5029.7709923664124" y="-430.28169014084511"/>
         </scene>
+        <!--Pay MethodsVC-->
+        <scene sceneID="pXB-lE-AHA">
+            <objects>
+                <viewController storyboardIdentifier="PayMethodsVC" id="adR-eg-e2K" customClass="PayMethodsVC" customModule="InStock" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="nVK-lj-AuZ">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" sectionIndexMinimumDisplayRowCount="1" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="rjY-0c-7DJ">
+                                <rect key="frame" x="0.0" y="0.0" width="393" height="558"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="sectionIndexBackgroundColor" red="0.60392156860000001" green="0.60392156860000001" blue="0.60392156860000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleAspectFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="payCell" rowHeight="100" id="Dq6-V0-M3e">
+                                        <rect key="frame" x="0.0" y="50" width="393" height="100"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Dq6-V0-M3e" id="5ob-IY-aZ7">
+                                            <rect key="frame" x="0.0" y="0.0" width="393" height="100"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="adR-eg-e2K" id="pAZ-dF-rkn"/>
+                                    <outlet property="delegate" destination="adR-eg-e2K" id="UEB-bb-gcP"/>
+                                </connections>
+                            </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gRR-MM-FbU">
+                                <rect key="frame" x="96" y="618" width="201" height="87"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled">
+                                    <attributedString key="attributedTitle">
+                                        <fragment content="Pay">
+                                            <attributes>
+                                                <font key="NSFont" size="48" name="Helvetica"/>
+                                                <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                            </attributes>
+                                        </fragment>
+                                    </attributedString>
+                                    <color key="baseBackgroundColor" red="0.56862745100000001" green="0.19215686269999999" blue="0.45882352939999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="payBtn:" destination="adR-eg-e2K" eventType="touchUpInside" id="xCY-Sj-61w"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Pqi-f0-dKQ"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Pqi-f0-dKQ" firstAttribute="trailing" secondItem="rjY-0c-7DJ" secondAttribute="trailing" id="4wj-KN-vjf"/>
+                            <constraint firstItem="gRR-MM-FbU" firstAttribute="top" secondItem="rjY-0c-7DJ" secondAttribute="bottom" constant="60" id="IY6-aQ-6m0"/>
+                            <constraint firstItem="Pqi-f0-dKQ" firstAttribute="trailing" secondItem="gRR-MM-FbU" secondAttribute="trailing" constant="96" id="SZo-W0-5Zn"/>
+                            <constraint firstItem="Pqi-f0-dKQ" firstAttribute="bottom" secondItem="gRR-MM-FbU" secondAttribute="bottom" constant="113" id="b5m-qu-vAm"/>
+                            <constraint firstItem="rjY-0c-7DJ" firstAttribute="leading" secondItem="Pqi-f0-dKQ" secondAttribute="leading" id="cHb-2d-doV"/>
+                            <constraint firstItem="Pqi-f0-dKQ" firstAttribute="bottom" secondItem="rjY-0c-7DJ" secondAttribute="bottom" constant="260" id="dB3-FQ-9WR"/>
+                            <constraint firstItem="gRR-MM-FbU" firstAttribute="leading" secondItem="Pqi-f0-dKQ" secondAttribute="leading" constant="96" id="mEX-m2-TcV"/>
+                            <constraint firstItem="rjY-0c-7DJ" firstAttribute="top" secondItem="nVK-lj-AuZ" secondAttribute="top" id="ywB-ik-TGL"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="T4w-3e-aeZ"/>
+                    <connections>
+                        <outlet property="payMethodTable" destination="rjY-0c-7DJ" id="N6Q-kA-vMh"/>
+                        <outlet property="payMethodsTable" destination="rjY-0c-7DJ" id="eJE-9Z-sgb"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lOh-Th-S2C" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="5844" y="-430"/>
+        </scene>
     </scenes>
     <designables>
         <designable name="2uU-zA-juE">
